--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: D. Stoppacher
 email: dstoppacher@ucsc.edu
-url: "https://dstoppacher.github.io/research_blog/" # the base hostname & protocol for your site
+url: "https://dstoppacher.github.io/myblog/" # the base hostname & protocol for your site
 github_username:  dstoppacher
 permalink:   /:categories/:title/
 
