--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: D. Stoppacher
 email: dstoppacher@ucsc.edu
-url: "https://dstoppacher.github.io/myblog/" # the base hostname & protocol for your site
+url: "https://dstoppacher.github.io/" # the base hostname & protocol for your site
 github_username:  dstoppacher
-permalink:   /:categories/:title/
+permalink:   /:title/
 
 markdown: kramdown
 theme: jekyll-theme-modernist
