--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ github_username:  dstoppacher
 permalink:   /:title/
 
 markdown: kramdown
-theme: jekyll-theme-modernist
+theme: jekyll-theme-dinky
 
 # Build settings
 mathjax: true
