--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: D. Stoppacher's research blog on computational astrophysics
+title: D. Stoppacher's research blog on<br>computational astrophysics
 email: dstoppacher@ucsc.edu
 url: "https://dstoppacher.github.io/" # the base hostname & protocol for your site
 github_username:  dstoppacher
